<resources>
    <string name="app_name">家电商城</string>
    <string name="main_radio_home">主页</string>
    <string name="main_radio_fen">分类</string>
    <string name="main_radio_search">搜索</string>
    <string name="main_radio_shoppingcar">购物车</string>
    <string name="main_radio_order">订单</string>
    <string name="main_radio_my">我的</string>

    <string name="frag_at_bottom">已经到底部了</string>

    <string name="is_no">0</string>
    <string name="xu_hao">序号</string>
    <string name="tu_pian">图片</string>
    <string name="produce">产品</string>
    <string name="name">名称</string>
    <string name="price_one">单价</string>
    <string name="price_2">单价</string>
    <string name="doit">操作</string>
    <string name="forget_pw">忘记密码</string>
    <string name="user_name">用户名</string>
    <string name="new_pw">新密码</string>
    <string name="input_pw_two">重复输入新密码</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="forget_now">立即找回</string>
    <string name="bao_you">包邮</string>
    <string name="ji_fen">积分折上折</string>
    <string name="number">数量</string>
    <string name="buy_now">立即购买</string>
    <string name="add_shoppingcar">加入购物车</string>
    <string name="add_collection">加入收藏夹</string>
    <string name="user_login">用户登录</string>
    <string name="user_pw">用户密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="people_info">收件人信息：</string>
    <string name="order_liu">订单流程：</string>
    <string name="order_goods">商品清单：</string>
    <string name="price_all">总计</string>
    <string name="button_ship">商品发货</string>
    <string name="button_return">请求退货</string>
    <string name="button_cancel">取消订单</string>
    <string name="button_pay">支付订单</string>
    <string name="button_finish_u">确认收货，完成订单</string>
    <string name="user_reg">用户注册</string>
    <string name="input_pw_2">重复输入用户密码</string>
    <string name="regist_now">立即注册</string>
    <string name="ok_to_submit">确认提交</string>
    <string name="submit_name">姓名：</string>
    <string name="shou_jian_name">收件人的姓名</string>
    <string name="shou_jian_tel">收件人的电话</string>
    <string name="shou_jian_add">收件人的地址</string>
    <string name="submit_tel">电话：</string>
    <string name="submit_add">地址：</string>
    <string name="f_tv">电视</string>
    <string name="f_bx">冰箱</string>
    <string name="f_xyj">洗衣机</string>
    <string name="f_kt">空调</string>
    <string name="f_rsq">热水器</string>
    <string name="good_today">今日商品</string>
    <string name="good_sale">热销商品</string>
    <string name="good_new">新到商品</string>
    <string name="user_m">管理员</string>
    <string name="hello_you">您好！</string>
    <string name="welcome_to">欢迎来到DD商城！</string>
    <string name="first_login">请先登录</string>
    <string name="change_pw">修改密码</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_order">我的订单</string>
    <string name="my_shoppingcar">我的购物车</string>
    <string name="check_update">检查更新</string>
    <string name="fan_ku">意见反馈</string>
    <string name="re_xian">客服热线</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="status">状态</string>
    <string name="all_price">总价钱</string>
    <string name="all_number">总数量</string>
    <string name="order_bian_hao">订单编号</string>
    <string name="no_log_first_login">还未登录，请先登录</string>
    <string name="shoping_car_null">购物车是空的</string>
    <string name="please_input_search_str">请输入搜索内容</string>
    <string name="order_null">订单是空的</string>
    <string name="no_this">没有此功能权限</string>
    <string name="select">选择</string>
    <string name="good_name">商品名称</string>
    <string name="select_all">全选</string>
    <string name="submit_order">提交订单</string>
    <string name="good_look">查看商品</string>
    <string name="good_del">移除收藏</string>
    <string name="good_picture">商品图片</string>
    <string name="good_number">商品数量</string>
    <string name="good_price">商品价格</string>
    <string name="del">删除</string>
    <string name="good_name_2">商品名字</string>
    <string name="good_pre">商品原价</string>
    <string name="order_look">查看详情</string>
    <string name="button_finish_2">确认收货</string>
    <string name="button_finish">完成订单</string>

    <string name="temp_good_price">￥99.99</string>
    <string name="temp_good_over">已售出9999个</string>
    <string name="temp_good_pre">原价：￥66.66</string>
    <string name="temp_good_name">商品名</string>
    <string name="temp_ship_ok">商品已发货</string>
    <string name="temp_add">小明，15904271234，辽宁省大连市甘井子区大连东软信息学院</string>
    <string name="temp_order_liu">2017年8月29日20:07:35————提交订单\n2017年8月29日20:07:35————提交订单\n2017年8月29日20:07:35————提交订单\n</string>
    <string name="temp_number">9555</string>
    <string name="temp_all_price">总价：￥999959.51</string>
    <string name="temp_user_u">【user1】</string>
    <string name="temp_number_2">002</string>
    <string name="temp_number_3">25</string>
    <string name="temp_number_float">999.889999</string>
    <string name="temp_good_now">现售价：9999元</string>
    <string name="temp_user_name">用户名</string>
    <string name="temp_word">文字文字文字文字文字文字</string>

    <string name="a_c_collection_null">收藏夹是空的</string>
    <string name="a_c_back">返回主页</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
