<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_f_goods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/is_no"
        app:srcCompat="@drawable/wait" />

    <TextView
        android:id="@+id/textView_f_goods_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/good_name_2"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_f_goods_pre_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/good_pre" />

    <TextView
        android:id="@+id/textView_f_goods_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/temp_good_now"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_f_goods_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/temp_good_over"
        android:textSize="18sp" />


</LinearLayout>
