<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chenexample.myshop16173.fragment.OrderFragment">


    <LinearLayout
        android:id="@+id/linearLayout_forder_null"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="40dp">

            <ImageView
                android:layout_width="82dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:src="@drawable/box_null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:text="@string/order_null"
                android:textColor="@color/colorMBlack0"
                android:textSize="25sp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout_forder_noLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="25sp"
            android:paddingTop="25sp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:padding="20dp"
                android:src="@drawable/face_false" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_log_first_login"
                android:textColor="@color/colorMRed"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_fclass_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_fclass_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regist"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_forder_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/xu_hao"
                android:textColor="@color/colorMBlack0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/order_bian_hao"
                android:textColor="@color/colorMBlack0" />

            <TextView
                android:id="@+id/textView_forder_top_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/user_name"
                android:textColor="@color/colorMBlack0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tu_pian"
                android:textColor="@color/colorMBlack0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/name"
                android:textColor="@color/colorMBlack0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/all_number"
                android:textColor="@color/colorMBlack0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/all_price"
                android:textColor="@color/colorMBlack0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/status"
                android:textColor="@color/colorMBlack0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/doit"
                android:textColor="@color/colorMBlack0" />
        </LinearLayout>

        <view
            class="android.support.v4.widget.SwipeRefreshLayout"
            android:id="@+id/refreshLayout_f_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ListView
                android:id="@+id/listView_forder"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </view>


    </LinearLayout>

</FrameLayout>
