<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_fcar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"/>

        <ImageView
            android:id="@+id/imageView_fcar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:src="@drawable/wait" />

        <TextView
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/textView_fcar_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:maxEms="8"
            android:text="@string/temp_good_name" />

        <TextView
            android:id="@+id/textView_fcar_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:maxLines="1"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/temp_number" />

        <EditText
            android:id="@+id/editText_fcar_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:ems="3"
            android:inputType="number" />

        <Button
            android:id="@+id/button_fcar_del"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:text="@string/del" />
    </LinearLayout>
</LinearLayout>
